--- a/.github/workflows/update-cpanm.yml
+++ b/.github/workflows/update-cpanm.yml
@@ -26,6 +26,9 @@ jobs:
           ref: main
           fetch-depth: 0
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: update cpanfile.snapshot
         run: make update
         working-directory: ./author/cpanm
