attest build provenance

--- a/.github/workflows/darwin-arm64.yml
+++ b/.github/workflows/darwin-arm64.yml
@@ -23,6 +23,8 @@ on:
 jobs:
   list:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - uses: actions/checkout@v4
       - id: set-matrix
@@ -40,6 +42,8 @@ jobs:
 
   sanity-check:
     runs-on: macos-14
+    permissions:
+      contents: read
     steps:
       - id: perl
         name: check pre-installed perl version
@@ -67,6 +71,10 @@ jobs:
     needs:
       - sanity-check
       - list
+    permissions:
+      contents: write
+      id-token: write
+      attestations: write
     timeout-minutes: 120
     strategy:
       fail-fast: false
@@ -105,6 +113,10 @@ jobs:
           PERL5LIB: ${{ github.workspace }}/scripts/darwin/local/lib/perl5
         working-directory: ./scripts/darwin
 
+      - uses: actions/attest-build-provenance@v1
+        with:
+          subject-path: ${{ runner.temp }}/perl.tar.zstd
+
       - name: upload
         run: |
           ACTIONS_VERSION=v$(<"$GITHUB_WORKSPACE/package.json" jq -r .version)
@@ -118,6 +130,10 @@ jobs:
     needs:
       - sanity-check
       - list
+    permissions:
+      contents: write
+      id-token: write
+      attestations: write
     timeout-minutes: 120
     strategy:
       fail-fast: false
@@ -157,6 +173,10 @@ jobs:
         env:
           PERL5LIB: ${{ github.workspace }}/scripts/darwin/local/lib/perl5
         working-directory: ./scripts/darwin
+
+      - uses: actions/attest-build-provenance@v1
+        with:
+          subject-path: ${{ runner.temp }}/perl.tar.zstd
 
       - name: upload
         run: |
